--- a/client/employee/pubspec.yaml
+++ b/client/employee/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.0.0
+  provider: ^6.0.5
+  xml: ^6.3.0
 
 dev_dependencies:
   flutter_test:
