--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-server.port=2026
-server.host=192.168.1.7
+spring.config.import=optional:file:.env[.properties]
+server.port=${SERVER_PORT}
+server.host=${SERVER_HOST}
 
 logging.level.org.springframework=INFO
 logging.level.com.git=INFO
@@ -15,9 +16,9 @@ logging.pattern.console=%-5level %logger{36} - %msg%n
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
-spring.datasource.url= jdbc:mysql://localhost:3306/teste
-spring.datasource.username=root
-spring.datasource.password=8EvlcUciChlyefOVedot
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=create-drop
