--- a/client/employee/pubspec.yaml
+++ b/client/employee/pubspec.yaml
@@ -9,14 +9,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.5.1
   http: ^1.0.0
-  provider: ^6.0.5
+  riverpod_annotation: ^2.3.5
   xml: ^6.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  custom_lint: ^0.6.7
+  riverpod_lint: ^2.3.13
+  riverpod_generator: ^2.4.3
+  build_runner: ^2.4.13
+  freezed: ^2.5.7
 
 flutter:
   uses-material-design: true
